--- a/DrivingRoutes/DrivingRoutes.csproj
+++ b/DrivingRoutes/DrivingRoutes.csproj
@@ -77,6 +77,12 @@
       <DependentUpon>FindRoute.xaml</DependentUpon>
     </Compile>
     <Compile Include="RouteCRUD.cs" />
+    <Compile Include="ShowRouteRealTime.xaml.cs">
+      <DependentUpon>ShowRouteRealTime.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="VideoWindow.xaml.cs">
+      <DependentUpon>VideoWindow.xaml</DependentUpon>
+    </Compile>
     <Page Include="AddRoute.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -107,6 +113,14 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="ShowRouteRealTime.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="VideoWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\Element.cs" />
